fix background images on tablet

--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -405,6 +405,10 @@ html, body {
     min-width: 100%;
   }
   
+  .sec-1-background {
+    background-attachment: inherit;
+  }
+  
   .sec-1-logo {
     top: 24px;
   }
